# ad_training_24.07

./: LICENSE  README.md
delivery_rpc/checker/: checker  requirements.txt
delivery_rpc/service/: Dockerfile  docker-compose.yml  main.py  requirements.txt
desquillery_club/checker/: checker  requirements.txt  tools.py
desquillery_club/checker/crypto/: dh.py
desquillery_club/service/: Dockerfile  docker-compose.yml
desquillery_club/service/src/: database.py  db_init.sql  main.py  models.py  requirements.txt  routes.py
desquillery_club/service/src/crypto/: secure_dh_params.py  squresystem.py
zmeygorynych/checker/: UIMain.cpp  checker  ex.py
zmeygorynych/service/: Dockerfile  docker-compose.yml  initscript.sql  run.sh
zmeygorynych/service/app/: run.sh  src
zmeygorynych/service/src/: CMakeLists.txt  Database.cpp  Database.h  Entity.cpp  Entity.h  Product.cpp  Product.h  Shop.cpp  Shop.h  UI.cpp  UI.h  UILogin.cpp  UIMain.cpp  UIShop.cpp  User.cpp  User.h  UserManager.cpp  UserManager.h  asciiFont.h  consts.h  main.cpp  util.cpp  util.h
